[4.2] - Fixing the centre aligning of cards

--- a/src/components/cardSelect/style/card.scss
+++ b/src/components/cardSelect/style/card.scss
@@ -13,7 +13,7 @@
   border-color: $primary-color;
   flex-direction: column;
   padding: 2rem;
-  margin: 0 2rem 0 2rem;
+  margin: 0 2rem 0 0;
 }
 
 .custom-card:hover {
